--- a/style.css
+++ b/style.css
@@ -3,3 +3,53 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+
+nav a {
+  padding: 10px;
+  background-color: grey;
+  text-align: center;
+  display: inline-block;
+}
+
+
+nav {
+  text-align: center;
+}
+
+
+figcaption {
+  font-size: smaller;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+
+#details div {
+  float: left;
+  width: 25%;
+  background-color: #f0f0f0;
+}
+
+
+footer div {
+  float: left;
+  width: 25%;
+  background-color: #f0f0f0;
+  text-align: center;
+}
